--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "firebase": "^11.0.1",
+    "next": "14.2.16",
+    "openai": "^4.68.2",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.16"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
